@@ -3,6 +3,9 @@ TODO
 保存历史记录 
 自定义保存格式（始终pdf/webp/zip,每次询问）
 下载前显示漫画信息（标题、作者、页数等）、保存格式、保存路径，需要确认下载
+'? 请选择操作： 开启下载日志输出
+指令 "开启下载日志输出" 不存在或不可用。'
+设置保持选项
 
 v1.0.0 [2025.12.20]
 更改 text为字典
@@ -12,7 +15,9 @@ v1.0.0 [2025.12.20]
 优化 设置、菜单功能列表的获取方式
 修改 Text、Link、InterfaceStyles 数据类为字典常量
 移除 get_command 类，改用函数式逻辑
-新增 大量注释（）
+新增 大量注释（） 
+移除 select_command()，改用ui.select()
+修复 设置、菜单默认选项不为上次选择选项的问题
 
 pre-0.3.3[2025.12.13] 
 删除 仓库中的yaml,InquirerPy,jmcomic模块
